test config change

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: MuseMorphose: Full-Song and Fine-Grained Music Style Transfer with Just One Transformer VAE
+description: "aaa\nbbb"
