--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-title: MuseMorphose Full-Song and Fine-Grained Music Style Transfer with Just One Transformer VAE
-description: aaacccvvv
+title: MuseMorphose
+description: Full-Song and Fine-Grained Music Style Transfer with Just One Transformer VAE  
+             aaa bbb
