--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
 theme: jekyll-theme-cayman
-title: MuseMorphose
-description: Full-Song and Fine-Grained Music Style Transfer with Just One Transformer VAE  
-             aaa bbb
+
+github:
+  is_project_page: false
+
+title: >
+  MuseMorphose
+  Full-Song and Fine-Grained Music Style Transfer with Just One Transformer VAE
+description: Shih-Lun Wu           Yi-Hsuan Yang
