--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,10 @@ theme: jekyll-theme-cayman
 
 github:
   is_project_page: false
+  
+markdown: kramdown
+kramdown:
+  math_engine: katex
 
 title: MuseMorphose
 description: Full-Song and Fine-Grained Music Style Transfer with Just One Transformer VAE
